--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -18,7 +20,13 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "keywords": ["website", "dynamic", "nodejs", "express", "full-stack"],
+  "keywords": [
+    "website",
+    "dynamic",
+    "nodejs",
+    "express",
+    "full-stack"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
