--- a/agent/package.json
+++ b/agent/package.json
@@ -1,18 +1,21 @@
 {
   "name": "pc-monitor-agent",
   "version": "1.0.0",
-  "description": "Real-time PC monitoring agent for error tracking",
+  "description": "Production-grade PC monitoring agent for error detection and reporting",
   "main": "agent.js",
   "scripts": {
     "start": "node agent.js",
     "install-service": "node install-service.js",
-    "uninstall-service": "node uninstall-service.js"
+    "uninstall-service": "node uninstall-service.js",
+    "test": "node agent.js --test"
   },
   "dependencies": {
-    "node-windows": "^1.0.0-beta.6",
+    "axios": "^1.6.2",
+    "ws": "^8.19.0",
     "systeminformation": "^5.30.7",
     "winston": "^3.19.0",
-    "ws": "^8.19.0"
+    "node-cron": "^3.0.3",
+    "node-windows": "^1.0.0-beta.6"
   },
   "devDependencies": {
     "pkg": "^5.8.1"
@@ -22,7 +25,9 @@
       "agent.js"
     ],
     "targets": [
-      "node18-win-x64"
+      "node18-win-x64",
+      "node18-linux-x64",
+      "node18-macos-x64"
     ],
     "outputPath": "dist"
   }
