--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
